#############TESTS FOR libGui

#remember to add CTEST_OUTPUT_ON_FAILURE true to the env variables

# add_executable(test_QTFile test_QTFile.cpp)
# set_target_properties(test_QTFile PROPERTIES VERSION ${PROJECT_VER} SOVERSION ${PROJECT_APIVER})	
# set_target_properties(test_QTFile PROPERTIES FOLDER STeAM/${PROJECT_NAME}/tests)
# ADD_DEPENDENCIES(test_QTFile  ${PROJECT_NAME})
# target_link_libraries( ${TEST_NAME}  ${PROJECT_NAME})

# add_test(NAME test_QTFile COMMAND test_QTFile)

